--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 title: xhocquet.info
 email: xhocquet@gmail.com
 description:
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://xhocquet.info" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /
+url: https://xhocquet.github.io # the base hostname & protocol for your site, e.g. http://example.com
 
 # Personal information
 author: Xavier Hocquet
