--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: xhocquet.info
 email: xhocquet@gmail.com
 description:
 baseurl: /
-url: https://xhocquet.github.io # the base hostname & protocol for your site, e.g. http://example.com
+url: https://xhocquet.info
 
 # Personal information
 author: Xavier Hocquet
