--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: xhocquet.info
 email: xhocquet@gmail.com
 description:
 baseurl: /
-url: https://xhocquet.info
+url: https://xhocquet.github.io
 
 # Personal information
 author: Xavier Hocquet
